# flangerift-plugin

./: CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
